<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:title="@string/filter_title"
        android:icon="@drawable/filter"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/done"
        android:title="@string/done_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/sctionLogout"
        app:showAsAction="never" />
</menu>