<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_quiz"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_dialog_title"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_dialog_grading"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"/>

    <ImageView
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"
        android:src="@drawable/quiz_dialog"
        android:layout_marginTop="@dimen/_20sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_dialog_message"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp">

        <Button
            android:id="@+id/start_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/quiz_dialog_button"
            android:fontFamily="@string/font_family_condensed"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:background="@color/colorAccent"/>

    </RelativeLayout>


</LinearLayout>
