<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context="com.salam.elearning.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username"
            android:textColor="@color/colorWhite"
            android:labelFor="@+id/username"
            android:textSize="@dimen/_13sdp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:hint="@string/login_hint_username"
            android:textColorHint="@color/colorHint"
            app:backgroundTint="@color/colorWhite"
            android:layout_marginBottom="@dimen/_15sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textColor="@color/colorWhite"
            android:labelFor="@+id/password"
            android:textSize="@dimen/_13sdp"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:hint="@string/login_hint_password"
            android:textColorHint="@color/colorHint"
            android:layout_marginBottom="@dimen/_30sdp"/>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorWhite"
            android:text="@string/login_signin"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp"
            android:layout_gravity="center"
            app:spinning_bar_color="@color/colorPrimary"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

        <!--<Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorWhite"
            android:text="@string/login_signin"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/colorPrimary"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forget"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_create"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
