<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forget_password_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context="com.salam.elearning.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_email"
            android:textColor="@color/colorWhite"
            android:labelFor="@+id/forget_password_email"
            android:textSize="@dimen/_13sdp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/forget_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:hint="@string/signup_hint_email"
            android:textColorHint="@color/colorHint"
            app:backgroundTint="@color/colorWhite"
            android:layout_marginBottom="@dimen/_15sdp" />

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/forget_password_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorWhite"
            android:text="@string/forget_password_button"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sdp"
            android:layout_gravity="center"
            app:spinning_bar_color="@color/colorPrimary"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

    </LinearLayout>

</RelativeLayout>
